[metadata]

name = python-project-proto
description = Simple example how to build python project with good style
long_description = file: README.rst
url = https://python-project-proto.readthedocs.io/en/latest/
project_urls =
    Source = https://github.com/schipiga/ppp

author = Sergei Chipiga
author_email = chipiga86@gmail.com

license = MIT license
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = no

[options.entry_points]
console_scripts =
	links = ppp.cli:main

[flake8]
exclude = docs/*
